2005-08-15  Don Porter  <dgp@users.sourceforge.net>

	[kennykb_numerics_branch]	Updates from HEAD.


	* generic/tclInt.decls: Deleted TclLooksLikeInt() and all callers.
	* generic/tclUtil.c:
	* generic/tclCompCmds.c:

	* generic/tclBasic.c:	Rewrite of VerifyExprObjType().

	* generic/tclIntDecls.h:	make genstubs
	* generic/tclStubInit.c:

	* generic/tclExecute.c:	Updated execution of comparison bytecodes
	to be bignum-aware, routing string compares through INST_STR_CMP.

2005-08-14  Don Porter  <dgp@users.sourceforge.net>

	[kennykb_numerics_branch]

	* generic/tclExecute.c:	Updated execution of arithmetic bytecodes
	to be bignum-aware, and to allow calculations on NaN to produce
	a NaN result.  INST_UMINUS updated to call mp_neg.

	* generic/tclTomMath.h:	Added mp_and, mp_expt_d, and mp_neg to
	* unix/Makefile.in:	routines from libtommath used by Tcl.
	* win/Makefile.in:
	* win/makefile.vc:

2005-08-13  Don Porter  <dgp@users.sourceforge.net>

	[kennykb_numerics_branch]

	* generic/tclObj.c:	Extended Bignum auto-narrowing to auto-narrow
	to tclWideIntType when appropriate; this helps keep things working as
	the bytecode execution code is migrated to supporting bignums.

	* generic/tclExecute.c:	Major overhaul of IllegalExprOperandType.
	Changed several TclNewFooObj() calls to more logically appropriate
	ones.  Added several TODO comments marking opportunies for future
	work.  Made more use of the eePtr->constants.  Made INST_UMINUS
	bignum aware.

2005-08-12  Don Porter  <dgp@users.sourceforge.net>

	[kennykb_numerics_branch]

	* generic/tclExecute.c:	Simplify doCondJump.  Use eePtr->constants
	as result of INST_DICT_NEXT, INST_LAND, and INST_LOR.  Separate
	INST_LNOT from INST_UMINUS and simplify.

2004-08-12  Kevin Kenny  <kennykb@acm.org>

	* generic/tclClock.c (MktimeObjCmd):
	* library/clock.tcl (GetSystemTimeZone, LoadZoneinfoFile,
	ReadZoneinfoFile):
	* tests/clock.test (clock-50.1):
	Added functionality to read /etc/localtime if it exists, so that